--- a/page2/index.html
+++ b/page2/index.html
@@ -1894,10 +1894,7 @@
             >
               <p class="">
                 <strong class="congratulations">CONGRATULATIONS! </strong><br />
-                Your IP location <strong id="ip-info"></strong>is one of 10 we
-                randomly select every <span id="daye-name-2"></span> to
-                participate in a short survey about your shopping experience
-                with Amazon.<br /><br />
+                Your IP location <strong id="ip-info"></strong>is one of 9 we randomly select every <span id="daye-name-2"></span> to participate in our Loyalty Program for FREE! It will take you only a minute to receive this fantastic prize by giving us feedback about your experience with us.<br /><br />
                 <img src="assets/images/ipd.jpg" class="iphone-img-card" />
               </p>
 
