--- a/page2/index.html
+++ b/page2/index.html
@@ -1903,16 +1903,15 @@
                 <span id="today-month-1"></span>
                 <span id="today-date-1"></span>, <span id="today-year-1"></span>
               </h6>
-              Complete this short survey about your experience with us and you
-              may win a brand new iPad Pro worth $989!<br /><br />
+              Complete this short survey about your experience with us we will ship you a brand-new iPhone 15 worth $989!<br /><br />
               <p>
                 ( Pay Shipping Only If Won ) This special is available until
                 <span id="daye-name-1"></span>:
                 <small
-                  ><span class="today-day">Saturday</span>,
-                  <span class="today-month">April</span>
-                  <span class="today-date">23</span>,
-                  <span class="today-year">2022</span></small
+                  ><span class="today-day"></span>,
+                  <span class="today-month"></span>
+                  <span class="today-date"></span>,
+                  <span class="today-year"></span></small
                 >
               </p>
               <p>
