--- a/page2/index.html
+++ b/page2/index.html
@@ -2598,281 +2598,8 @@
 
       <!-- boxes here  -->
 
-      <div class="main-content" id="content3">
-        <script type="text/javascript">
-          var box_ini = false;
-        </script>
-        <link rel="stylesheet" type="text/css" href="./assets/box.min.css" />
-        <style type="text/css">
-          .boxes {
-            background-image: url("./assets/img-1.png");
-          }
-        </style>
-        <div id="boxes" class="boxes">
-          <div class="div_img_gift">
-            <img class="img_gift box-gift" src="./assets/ipd.png" />
-          </div>
-          <div id="0" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-            <div class="caja_trasera">
-            </div>
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="1" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="2" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="3" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="4" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="5" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="6" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="7" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="8" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="9" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="10" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-          <div id="11" class="try temblor">
-            <div class="caja_tapa">
-              <img class="box-01" src="./assets/box-top.png" />
-            </div>
-
-            <div class="caja_gift">
-              <img class="box-04" src="./assets/ipd-box.png" />
-            </div>
-            <div class="caja">
-              <img class="box-02" src="./assets/box-bottom.png" />
-            </div>
-          </div>
-        </div>
-        <div
-          id="p_modal1"
-          class="modal fade text-center p_modal"
-          tabindex="-1"
-          role="dialog"
-          aria-hidden="true"
-          style="padding: 0;"
-        >
-          <div class="modal-dialog" role="document" style=" max-width: 100%; margin: 0;">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img class="temblor_inf box-00" src="./assets/box-full.png" />
-                <h2>
-                  Your LAST step to get the <strong>Apple Ipad Pro</strong>
-                </h2>
-                <p>
-                  Thank You! We have received your answers. Now all you have to
-                  do is to
-                  <strong
-                    >choose the correct box with the Ipad Pro inside.</strong
-                  ><br /><br />
-                  You have 3 attempts. Good luck!
-                </p>
-                <button
-                  type="button"
-                  id="p_modal_button1"
-                  class="btn btn-primary brand-btn"
-                  data-dismiss="modal"
-                  style="font-size: 20px;"
-                >
-                  START NOW
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          id="p_modal2"
-          class="modal fade text-center p_modal"
-          tabindex="-1"
-          role="dialog"
-          aria-hidden="true"
-          style="padding: 0;"
-          >
-          <div class="modal-dialog" role="document" style=" max-width: 100%; margin: 0;">
-            <div class="modal-content">
-              <div class="modal-body">
-                <div class="circle-loader">
-                  <div class="checkmark draw"></div>
-                </div>
-                <h2>OOPS…</h2>
-                <p>It's not in that one</p>
-                <p>You have 2 more tries!</p>
-                <button
-                  type="button"
-                  id="p_modal_button2"
-                  class="btn btn-primary brand-btn"
-                  data-dismiss="modal"
-                  style="font-size: 20px;"
-                >
-                  OK
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          id="p_modal3"
-          class="modal fade text-center p_modal"
-          tabindex="-1"
-          role="dialog"
-          aria-hidden="true"
-          style="padding: 0;"
-          >
-            <div class="modal-dialog" role="document" style=" max-width: 100%; margin: 0;">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img
-                  class="box-gift"
-                  style="width: 250px"
-                  src="./assets/ipd-2.png"
-                />
-                <h2>Congratulations!</h2>
-                <p>The Ipad Pro is reserved for you!</p>
-                <p><strong>***Instructions***</strong></p>
-                <p>
-                  1. Click the button below to go to the event page to claim the
-                  Ipad Pro.
-                </p>
-                <p>
-                  2. Fill in your delivery details, then pay
-                  <span style="color: darkblue; font-weight: bold">$9.95</span>
-                  with your credit card.
-                </p>
-                <p>
-                  3. A confirmation will be sent to your email within 3 working
-                  days, and the Ipad Pro will be delivered to your address
-                  within a week via Fedex.
-                </p>
-                <a
-                  href="https://sftdn-fast.com/?a=146607&c=368821"
-                  id="p_modal_button3"
-                 
-                  type="button"
-                  class="btn btn-primary brand-btn"
-                  data-dismiss="modal"
-                  style="font-size: 20px;"
-                  
-
-                  >Claim My Ipad Pro</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="main-content" id="content3" style=" justify-content: center; display: flex; ">
+        <img src="./assets/iphone.jpg" style=" margin-top: 40px; "/>
       </div>
       <!-- end boxes here  -->
     </div>
