--- a/page2/index.html
+++ b/page2/index.html
@@ -2599,7 +2599,10 @@
       <!-- boxes here  -->
 
       <div class="main-content" id="content3" style=" justify-content: center; display: flex; ">
-        <img src="./assets/iphone.jpg" style=" margin-top: 40px; "/>
+        <img src="./assets/iphone.jpg" style="
+        margin-top: 40px;
+        width: 100%;
+    "/>
       </div>
       <!-- end boxes here  -->
     </div>
