--- a/page2/index.html
+++ b/page2/index.html
@@ -2599,7 +2599,7 @@
       <!-- boxes here  -->
 
       <div class="main-content" id="content3" style="justify-content: center;display: flex;flex-direction: column; margin-top: 40px;">
-        <h6 class="modal-title heading-font mb-2" style=" padding: 0 15px; ">
+        <h6 class="modal-title heading-font mb-2" style=" padding: 0 20px 20px 20px; ">
           Congratulations! Just cover the cost of shipping. You will receive your brand-new iPhone 15 within 4 days
         </h6>
         <img src="./assets/iphone.jpg" style="
