--- a/page2/index.html
+++ b/page2/index.html
@@ -2602,10 +2602,10 @@
         <h6 class="modal-title heading-font mb-2" style=" padding: 0 20px 20px 20px; ">
           Congratulations! Just cover the cost of shipping. You will receive your brand-new iPhone 15 within 4 days
         </h6>
-        <img src="./assets/iphone.jpg" style="
+        <img src="./assets/iphone.jpg" style="width: 100%;"/>
         
-        width: 100%;
-    "/>
+        <img src="./assets/buy.jpg" style="width: 100%;"/>
+
       </div>
       <!-- end boxes here  -->
     </div>
