--- a/page2/index.html
+++ b/page2/index.html
@@ -3400,11 +3400,7 @@ span.a-nowrap {
 }
 
 /* ******** */
-body {
-    font-size: 14px;
-    line-height: 20px;
-    font-family: Arial,sans-serif
-}
+
 
 h1 {
     font-weight: 400;
@@ -5302,9 +5298,6 @@ ul.a-unordered-list.a-box-list li:first-child .a-box,ul.a-unordered-list.a-box-l
     box-sizing: border-box
 }
 
-body {
-    min-height: 100%
-}
 
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section {
     display: block
@@ -5394,11 +5387,6 @@ textarea {
     vertical-align: top
 }
 
-body {
-    padding: 0;
-    margin: 0;
-    background: #fff
-}
 
 /* ******** */
 .a-color-success {
@@ -5407,10 +5395,6 @@ body {
 
 .a-color-attainable {
     color: #008a00!important
-}
-
-body {
-    color: #0F1111
 }
 
 .a-color-base {
@@ -9586,7 +9570,7 @@ ul.a-pagination li a:active {
     src: url(https://m.media-amazon.com/images/S/sash/2SazJx$EeTHfhMN.woff2) format("woff2"),url(https://m.media-amazon.com/images/S/sash/CjbL$jCCegyfqZ7.woff) format("woff")
 }
 
-.a-ember body {
+.a-ember {
     font-family: "Amazon Ember",Arial,sans-serif
 }
 
