--- a/page2/index.html
+++ b/page2/index.html
@@ -2683,10 +2683,15 @@
               });
           }));</script>                           </div>
                                        </div>
-                                            <div id="valuePropT1_feature_div" class="celwidget" data-feature-name="valuePropT1" data-csa-c-type="widget" data-csa-c-content-id="valuePropT1" data-csa-c-slot-id="valuePropT1_feature_div" data-csa-c-asin="B0CHBPGMFH" data-csa-c-is-in-initial-active-row="false" data-csa-c-id="4ko30a-2nttzz-xq7xhc-kaue8d" data-cel-widget="valuePropT1_feature_div">
-                                                           </div>
-                                            <div id="addOnMessage_feature_div" class="celwidget" data-feature-name="addOnMessage" data-csa-c-type="widget" data-csa-c-content-id="addOnMessage" data-csa-c-slot-id="addOnMessage_feature_div" data-csa-c-asin="B0CHBPGMFH" data-csa-c-is-in-initial-active-row="false" data-csa-c-id="7auror-e5nb5q-5boia5-ne89p4" data-cel-widget="addOnMessage_feature_div">
-                                                             </div>
+                                       <div id="availabilityInsideBuyBox_feature_div" class="celwidget" data-feature-name="availabilityInsideBuyBox" data-csa-c-type="widget" data-csa-c-content-id="availabilityInsideBuyBox" data-csa-c-slot-id="availabilityInsideBuyBox_feature_div" data-csa-c-asin="B0CHBPGMFH" data-csa-c-is-in-initial-active-row="false" data-csa-c-id="fe9nfk-wm0d02-rzerm5-kei440" data-cel-widget="availabilityInsideBuyBox_feature_div">
+                                        <div class="a-section a-spacing-none">                                       <div id="availability" class="a-section a-spacing-base a-spacing-top-micro }">Shipping and handling -<span class="a-size-medium a-color-success"> $9.98 </span>                 <br>       </div>         <div class="a-section a-spacing-none">  </div>                <div class="a-section a-spacing-mini">    </div>   <style>
+.availabilityMoreDetailsIcon {
+   width: 12px;
+   vertical-align: baseline;
+   fill: #969696;
+}
+</style> </div>                             </div>                                
+                                            
                                             <div id="availabilityInsideBuyBox_feature_div" class="celwidget" data-feature-name="availabilityInsideBuyBox" data-csa-c-type="widget" data-csa-c-content-id="availabilityInsideBuyBox" data-csa-c-slot-id="availabilityInsideBuyBox_feature_div" data-csa-c-asin="B0CHBPGMFH" data-csa-c-is-in-initial-active-row="false" data-csa-c-id="fe9nfk-wm0d02-rzerm5-kei440" data-cel-widget="availabilityInsideBuyBox_feature_div">
                                                        <div class="a-section a-spacing-none">                                       <div id="availability" class="a-section a-spacing-base a-spacing-top-micro }">                             <span class="a-size-medium a-color-success"> 3 Left In Stock </span>                 <br>       </div>         <div class="a-section a-spacing-none">  </div>                <div class="a-section a-spacing-mini">    </div>   <style>
               .availabilityMoreDetailsIcon {
