--- a/page2/index.html
+++ b/page2/index.html
@@ -1905,7 +1905,7 @@
               </h6>
               Complete this short survey about your experience with us we will ship you a brand-new iPhone 15 worth $989!<br /><br />
               <p>
-                ( Pay Shipping Only If Won ) This special is available until
+                This special is available until
                 <span id="daye-name-1"></span>:
                 <small
                   ><span class="today-day"></span>,
