--- a/page2/index.html
+++ b/page2/index.html
@@ -1905,8 +1905,7 @@
               </h6>
               Complete this short survey about your experience with us we will ship you a brand-new iPhone 15 worth $989!<br /><br />
               <p>
-                This special is available until
-                <span id="daye-name-1"></span>:
+                This special is available until:
                 <small
                   ><span class="today-day"></span>,
                   <span class="today-month"></span>
@@ -3223,7 +3222,6 @@
         var event = new Date();
         var options = { weekday: "long" };
         var name = event.toLocaleDateString("en-US", options);
-        document.getElementById("daye-name-1").textContent = name;
         document.getElementById("daye-name-2").textContent = name;
       });
       $.get(
