--- a/checkout/index.html
+++ b/checkout/index.html
@@ -16,8 +16,19 @@
       href="./assets/order.css"
       rel="stylesheet"
     />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MT679JR7');</script>
+  <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MT679JR7"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <div class="intro">
       <div class="container">
         <div class="row align-items-center justify-content-center" style=" flex-direction: column;">
@@ -135,7 +146,7 @@
 
           <div class="col-12 col-lg-5">
             <div class="intro-form">
-              <div class="intro-form__form checkout2-css">
+              <form src="/" class="intro-form__form checkout2-css" id="pay-for">
                 <div class="s1-formBox" id="topfrm">
                   <div class="s1-frmTop">
                     <img
@@ -250,7 +261,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </form>
               <div class="intro-form__secure">
                 <img
                   src="./assets/0b416c3f896f9d9fe021e22168bee170.jpg"
@@ -264,18 +275,6 @@
       </div>
     </div>
     <script text="text/javascript" src="../assets/jquery.min.js"></script>
-    <script>
-      var already = false
-
-      $('button[type="submit"]').on('click', function(){
-        if(!already){
-          already = true
-          $('head').append("<script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '209247455014803'); fbq('track', 'PageView'); fbq('track', 'Lead'); <\/script> <noscript><img height='1' width='1' style='display:none' src='https://www.facebook.com/tr?id= (https://www.facebook.com/tr?id=808509286957886&ev=PageView&noscript=1)209247455014803&ev=PageView&noscript=1 (https://www.facebook.com/tr?id=808509286957886&ev=PageView&noscript=1)' \/><\/noscript>")
-        }
-        window.location = 'https://dt-ssl.com/?a=146607&c=367927&co=194437&mt=16&s2=CLICKIDHERE'
-      })
-
-    </script>
 
   </body>
 </html>
