--- a/checkout/index.html
+++ b/checkout/index.html
@@ -31,17 +31,15 @@
   <!-- End Google Tag Manager (noscript) -->
     <div class="intro">
       <div class="container">
-        <div class="row align-items-center justify-content-center" style=" flex-direction: column;">
+        <form class="row align-items-center justify-content-center" id="checkout" style=" flex-direction: column;">
 
           <div class="col-12 col-lg-5">
             <div class="intro-form">
               <div class="intro-form__form checkout2-css">
                 <div class="s1-formBox" id="topfrm">
                   <div class="s1-from-inner show-3ds-popup">
-                    <form
+                    <div
                       class="checkout-form has-validation-callback"
-                      id="checkout"
-                      novalidate="novalidate"
                     >
                 
                      
@@ -136,7 +134,7 @@
                         data-threeds="pan"
                       />
                       <div class="clearall"></div>
-                    </form>
+                  </div>
                   </div>
                 </div>
               </div>
@@ -146,7 +144,7 @@
 
           <div class="col-12 col-lg-5">
             <div class="intro-form">
-              <form src="/" class="intro-form__form checkout2-css" id="pay-for">
+              <div  class="intro-form__form checkout2-css" id="pay-for">
                 <div class="s1-formBox" id="topfrm">
                   <div class="s1-frmTop">
                     <img
@@ -158,8 +156,6 @@
                   <div class="s1-from-inner show-3ds-popup">
                     <div
                       class="checkout-form has-validation-callback"
-                      id="checkout"
-                      novalidate="novalidate"
                     >
                       <div
                         class="form-error-text"
@@ -261,7 +257,7 @@
                     </div>
                   </div>
                 </div>
-              </form>
+              </div>
               <div class="intro-form__secure">
                 <img
                   src="./assets/0b416c3f896f9d9fe021e22168bee170.jpg"
@@ -271,7 +267,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </form>
       </div>
     </div>
     <script text="text/javascript" src="../assets/jquery.min.js"></script>
